<?xml version="1.0"?>

<!--
    Copyright (C) 2025 Altera Corporation
    SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fpga_doc_control_driver</name>
  <version>0.1.0</version>
  <description>Altera FPGA Drive-on-Chip hardware interface for ROS control.</description>

  <maintainer email="scott.ware@altera.com">Scott Ware</maintainer>

  <author email="scott.ware@altera.com">Scott Ware</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
